Revision history for WebService::Idonethis

{{$NEXT}}

    * INTERNAL: Made the changelog file look nicer.

0.11      2013-02-21 01:40:45 Australia/Melbourne

    * BUGFIX: Remove spurious warnings when printing unicode/utf8.
    * TEST:   Added trivial test case for loading module (load.t).

0.10      2013-02-19 02:20:24 Australia/Melbourne

    * BUGFIX: Github #5 - Actually give help on --help. Thanks @wizonesolutions.

0.09      2013-02-19 00:38:22 Australia/Melbourne

    * FEATURE: Added '-f' switch to `idone` and `idonethis-memories` to specify
    config file.

    * FEATURE: Added `-d` switch to `idone` to allow specification of dates.

    * FEATURE: Added `-h` switch to `idone` to show help.

    * DOCUMENTATION: Lots of new documentation in `idone`.

0.08      2013-02-18 13:52:43 Australia/Melbourne

    * FEATURE: Added '-c' switch to idone.
    * FEATURE: Idone now always lists the date it's reading from, or adding to.
    * HINT:    Try `idone -lc` for the best todo cmdline ever.

0.07      2013-02-18 10:57:51 Australia/Melbourne

    * FEATURE: The `idone` program now accepts a '-y' switch to allow listing or adding
    to yesterday's done list.

0.06      2013-02-15 13:56:08 Australia/Melbourne

    * INTERNAL: Removed dependencies on MooseX::Method::Signatures. Installing should be
    much easier now.
    * INTERNAL: Main class is now immutable. Execution should be faster now.
    * INTERNAL: Shifted from Moose to Moo, which is much faster and has fewer dependencies.